restore bug
